added image of seahawks

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <main>
             <header>
                 <h1>CSS is Cool</h1>
-                <p>The iSchool is My School!</p>
+                <p><a href="https://ischool.uw.edu/">The iSchool is My School!</a></p>
             </header>
 
-            <section>
+            <section class ="menu">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -22,6 +22,11 @@
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
+
+            <section>
+                <p>I am a football fan! GO HAWKS! </p>
+                <img src="css/seahawks.jpg">
+            </section>  
 
             <footer>
                 <p>&copy; 2014 Rylan Bonnevie</p>
